--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,7 @@
 {% if result %}
 <div class="alert alert-success mt-4 text-center">
   <h4>Composition Found</h4>
+  <p><strong>Composition:</strong> {{ result.categories }}</p>
   <p><strong>Winrate:</strong> {{ result.winrate }}</p>
   <p><strong>Games analyzed:</strong> {{ result.games }}</p>
 </div>
@@ -121,6 +122,7 @@
   {{ message }}
 </div>
 {% endif %}
+
 
 </body>
 </html>
